--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "axios": "^1.7.9",
         "json-server": "^1.0.0-beta.3",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-toastify": "^11.0.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
